# homeassistant-cloudflare-ip-sync

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yaml
custom_components/cloudflare_ip_sync/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/cloudflare_ip_sync/translations/: en.json
docs/images/: README.md
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_services.py
