[project]
name = "cloudflare_ip_sync"
version = "0.1.0"
description = "Home Assistant custom integration that syncs a public IP entity into a Cloudflare Rule List."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[project.optional-dependencies]
# Test/dev tooling. pytest-homeassistant-custom-component pins the matching
# Home Assistant version and its test harness; aioresponses mocks the
# Cloudflare HTTP API in the HA-free api.py tests. Install with:
#   uv pip install -e ".[test]"
test = [
    "pytest-homeassistant-custom-component",
    "aioresponses",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
# Mirror Home Assistant Core's baseline rule set.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
# Home Assistant ships without published type stubs for everything.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
